Implement DatabricksDatabaseMetaData#supportsTransactionIsolationLevel (#726)
DBSQL and All-purpose computes have limited support of transactions, single table and allowing dirty reads.
The implementation of the method is also inline with the existing driver.